[package]
name = "warpack-cli"
description = "Warpack CLI."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
warpack-core = { path = "../core" }
warpack-formats = { path = "../formats" }
warpack-lua-parser = { path = "../lua-parser" }

serde = "1.0.104"
pest = "2.1.2"
rlua = "0.16.3"
ron = "0.5.1"
bincode = "1.2.1"
anyhow = "1.0.26"
dotenv = "0.15.0"

[dependencies.clap]
version = "2.33.0"
default-features = false
